--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ body {
 }
 
 .header__link {
+  display: block;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
@@ -131,7 +132,7 @@ body {
   color: var(--hover-color);
   position: relative;
 }
-.current::before {
+.current::after {
   content: '';
   width: 100%;
   height: 4px;
