--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ body {
 /* -------------------------------------Header------------------------------------------------------- */
 
 .header {
-  padding: 24px 0px 25px 0px;
+  /* padding: 24px 0px 25px 0px; */
   border-bottom: 1px solid var(--header-border-color);
 }
 .header__container {
@@ -117,6 +117,7 @@ body {
 }
 
 .header__link {
+  padding: 32px 0;
   display: block;
   font-weight: 500;
   line-height: 1.14;
@@ -139,7 +140,7 @@ body {
   background: var(--hover-color);
   position: absolute;
   left: 0;
-  bottom: -33px;
+  bottom: 0;
   border-radius: 2px;
 }
 
@@ -262,7 +263,10 @@ body {
 }
 .work__text {
   width: 100%;
-  padding: 27px 0px;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: rgba(47, 48, 58, 0.8);
   text-align: center;
   font-weight: 700;
